// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`indent.js - {"useTabs":true,"tabWidth":8} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
tabWidth: 8
useTabs: true
                                                      printWidth: 80 (default) |
=====================================input======================================
\`
Mixed tabs and spaces:
\${() => {a}}
 	\${() => {a}}
  	\${() => {a}}
   	\${() => {a}}
    	\${() => {a}}
     	\${() => {a}}
      	\${() => {a}}
       	\${() => {a}}
        	\${() => {a}}

Tabs:
	\${() => {a}}
		\${() => {a}}
\`

=====================================output=====================================
\`
Mixed tabs and spaces:
\${() => {
	a;
}}
 	\${() => {
		a;
	}}
  	\${() => {
		a;
	}}
   	\${() => {
		a;
	}}
    	\${() => {
		a;
	}}
     	\${() => {
		a;
	}}
      	\${() => {
		a;
	}}
       	\${() => {
		a;
	}}
        	\${() => {
			a;
		}}

Tabs:
	\${() => {
		a;
	}}
		\${() => {
			a;
		}}
\`;

================================================================================
`;

exports[`indent.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
\`
Mixed tabs and spaces:
\${() => {a}}
 	\${() => {a}}
  	\${() => {a}}
   	\${() => {a}}
    	\${() => {a}}
     	\${() => {a}}
      	\${() => {a}}
       	\${() => {a}}
        	\${() => {a}}

Tabs:
	\${() => {a}}
		\${() => {a}}
\`

=====================================output=====================================
\`
Mixed tabs and spaces:
\${() => {
  a;
}}
 	\${() => {
    a;
  }}
  	\${() => {
      a;
    }}
   	\${() => {
      a;
    }}
    	\${() => {
        a;
      }}
     	\${() => {
        a;
      }}
      	\${() => {
          a;
        }}
       	\${() => {
          a;
        }}
        	\${() => {
            a;
          }}

Tabs:
	\${() => {
    a;
  }}
		\${() => {
      a;
    }}
\`;

================================================================================
`;
